about.css
/* RESET */

/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
}
/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
  5. Improve media defaults
*/
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
/*
  6. Remove built-in form typography styles
*/
input, button, textarea, select {
  font: inherit;
}
/*
  7. Avoid text overflows
*/
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}
/*
  8. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

/* RESET END */

/* BODY START */

body {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: .20fr .5fr .5fr .5fr .1fr;
  overflow-x: hidden;
  height: 100%;
  background-color: rgba(0, 0, 0, 0);
  transition: background-color .5s ease-in-out;
}

  /* ADDING BLUR CLASSLIST TO BLUR CONTENT LATER */
  .blurred {
    filter: blur(8px);
  }

a {
  text-decoration: none;
  color: white;
}

.hide {
opacity: 0;
}

/* BODY END */

/* HEADER START */

header {
  width: 100%;
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 2;
  height: 100%;
}

.container {
grid-column-start: 1;
grid-column-end: 3;
display: grid;
grid-template-columns: repeat(3, 1fr);
height: 100%;
}

.book {
  width: 100%;
  height: 100%;
  grid-column-start: 1;
  grid-column-end: 4;
  position: relative;
}

.logo {
justify-self: center;
grid-column-start: 2;
grid-column-end: 3;
position: absolute;
width: 220px;
height: 220px;
align-self: start;
margin-top: -50px;
cursor: pointer;
}

.container > h2 {
justify-self: center;
grid-column-start: 2;
grid-column-end: 3;
position: absolute;
color: white;
align-self: center;
}

  /* NAV START */
  
  .icon-container {
    grid-column-start: 3;
    grid-column-end: 4;
    position: absolute;
    justify-self: end;
    margin-top: 3%;
    margin-right: 5%;
  }

  .navigation {
    grid-column-start: 3;
    grid-column-end: 4;
    justify-self: end;
    position: absolute;
    background: linear-gradient(109.6deg, rgb(36, 45, 57) 11.2%, rgb(16, 37, 60) 51.2%, rgb(0, 0, 0) 98.6%);
    height: 149.6%;
    width: 0px;
    transition: width 0.5s ease-in-out;
  }

  nav {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(4, 1fr);
  }

  .exit {
    width: 25px;
    height: 25px;
    margin: 5% 0 0 5%;
  }

  .exit:hover {
    cursor: pointer;
  }

  ul {
    list-style-type: none;
    grid-row-start: 1;
    grid-row-end: 5;
    line-height: 100px;
    font-size: 1.2rem;
  }

  .nav-icon-one {
    width: 40px;
    border: 2px solid white;
    grid-column-start: 3;
    grid-column-end: 4;
    justify-self: center;
    position: relative;
  }

  .nav-icon-two {
    width: 40px;
    border: 2px solid white;
    grid-column-start: 3;
    grid-column-end: 4;
    justify-self: center;
    margin-top: 6px;
  }

  .nav-icon-three {
    width: 40px;
    border: 2px solid white;
    grid-column-start: 3;
    grid-column-end: 4;
    justify-self: center;
    margin-top: 6px;
  }

  @keyframes rotate {
    0% {
      transform: rotate(0);
    }

    100% {
      transform: rotateY(-180deg);
    }
  }

  .icon-container:hover {
    cursor: pointer;
    animation: rotate .5s ease-in-out 1;
  }

  .service {
    display: grid;
    grid-template-columns: 1fr;
    height: 25%;
  }

  .sunday {
    grid-column: 1/2;
    grid-row: 2/3;
    display: none;
    justify-self: center;
    align-self: start;
  }

  .tuesday {
    grid-column: 1/2;
    grid-row: 3/4;
    display: none;
    justify-self: center;
    align-self: start;
  }

  .cena {
    grid-column: 1/2;
    grid-row: 4/5;
    display: none;
    justify-self: center;
    align-self: start;
  }

  .vigil {
    grid-column: 1/2;
    grid-row: 5/6;
    display: none;
    justify-self: center;
    align-self: start;
  }


  /* NAV END */

main {
grid-row-start: 2;
grid-row-end: 5;
grid-column-start: 1;
grid-column-end: 4;
display: grid;
grid-template-rows: repeat(2, 1fr) 2fr;
}

.intro {
grid-column-start: 1;
grid-column-end: 4;
display: grid;
grid-template-columns: repeat(3, 1fr);
grid-template-rows: .03fr .7fr .5fr;
height: 100%;
}

.intro-title {
color: black;
grid-column-start: 2;
grid-column-end: 3;
align-self: start;
margin-top: 10px;
}

.service-image {
grid-column-start: 1;
grid-column-end: 2;
grid-row-start: 2;
grid-row-end: 3;
align-self: center;
justify-self: center;
width: 85%;
height: 85%;
opacity: 100;
transition: opacity .5s ease-in-out;
}

.intro-info1 {
grid-column-start: 2;
grid-column-end: 4;
grid-row-start: 2;
grid-row-end: 3;
align-self: center;
font-size: 1.2em;
margin-right: 25%;
margin-left: 10%;
justify-self: center;
}

.intro-info2 {
grid-column-start: 1;
grid-column-end: 4;
grid-row-start: 3;
grid-row-end: 4;
align-self: center;
font-size: 1.2em;
padding: 0 50px 0 50px;
margin-right: 10%;
margin-left: 10%;
}

.pastors {
grid-column-start: 1;
grid-column-end: 4;
grid-row: 2/3;
display: grid;
grid-template-columns: repeat(3, 1fr);
grid-template-rows: repeat(2, .2fr) 1fr;
height: 101%;
}

.pastor-title {
grid-column-start: 2;
grid-column-end: 3;
color: black;
align-self: start;
}

.pastor-image {
grid-column-start: 2;
grid-column-end: 3;
align-self: center;
grid-row-start: 3;
grid-row-end: 4;
justify-self: center;
width: 550px;
height: 550px;
cursor: pointer;
margin-top: -16%;
opacity: 100;
transition: opacity .5s ease-in-out;
}

.pastor-name {
grid-column-start: 2;
grid-column-end: 3;
justify-self: center;
align-self: start;
grid-row-start: 2;
grid-row-end: 3;
font-size: 1.1em;
margin-top: -7%;
}

.leva-container {
  background-color: transparent;
  justify-self: center;
  align-self: center;
  width: 55%;
  height: 0;
  overflow: hidden;
  filter: blur(0);
  display: flex;
  justify-content: center;
  align-items: center;
}
/* ... */

